--- a/src/App.css
+++ b/src/App.css
@@ -8,11 +8,19 @@
   border-top: 1px solid #dee2e6;
   padding: 10px 0;
   text-align: center;
+    position: fixed;
 }
 
 
 .post-Card{
     margin: 20px 50px;
+    padding: 20px;
+    border: 1px solid #dee2e6;
+    border-radius: 5px;
+    background-color: #ffffff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s ease;
+    
 }
 
 .createPost{
