--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
   padding: 10px 0;
   text-align: center;
     position: fixed;
+    bottom: 0;
 }
 
 
@@ -20,7 +21,7 @@
     background-color: #ffffff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     transition: box-shadow 0.3s ease;
-    
+
 }
 
 .createPost{
