--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
   position: fixed;
   bottom: 0;
   width: 100%;
+  z-index: 1000;
 }
 
 .post-Card {
@@ -18,6 +19,8 @@
   border: 1px solid #dee2e6;
   border-radius: 5px;
   background-color: #ffffff;
+  width: 80%; 
+  margin-left: 10%;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: box-shadow 0.3s ease;
 }
